# A2A-DEMO

./: .env  README.md  pyproject.toml
a2a/: __init__.py
a2a/client/: a2a_client.py
a2a/server/: agent_execution.py  apps.py  request_handlers.py  tasks.py
a2a/types/: artifacts.py  task_status.py
a2a/utils/: message_factory.py  task_factory.py
agents/booking_agent/: __main__.py  agent_executor.py  booking_agent.py  pyproject.toml
agents/cost_agent/: __main__.py  agent_executor.py  cost_agent.py  pyproject.toml
agents/symptom_agent/: __main__.py  agent_executor.py  pyproject.toml  symptom_agent.py
data/: data_164_166.json  embeddings_cache.pkl  faiss_index.index
host_agent/: __main__.py  remote_agent_connection.py  routing_agent.py
interface/: gradio_app.py
tools/: booking_tool.py  cost_tool.py  symptoms_tool.py
