[project]
name = "cost_agent"
version = "0.1.0"
description = "Tư vấn chi phí khám chữa bệnh, bảo hiểm y tế"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-adk>=1.0.0",
    "gradio>=5.30.0",
    "langchain-google-genai>=2.1.5",
    "langchain-mcp-adapters>=0.1.0",
    "langgraph>=0.4.5",
    "mcp>=1.5.0",

]

[tool.uv.sources]

